fix: Align header links

--- a/style.css
+++ b/style.css
@@ -1,16 +1,18 @@
-#dark-blue {
+#dark-blue,
+#hero-text {
     background-color: #1F2937;
 }
 
 
 header {
-    margin-top: -25px;
+    margin-top: 0;
 }
 
 .header {
     justify-content: space-evenly;
     display: flex;
     color: white;
+
 }
 
 footer {
@@ -20,27 +22,156 @@ footer {
 
 .footer {
     padding: 5px;
-    margin-bottom: -45px;
+    margin-bottom: 0px;
     justify-content: center;
     text-align: center;
 }
 
-#logo {
-    float: left;
+
+
+#header-links h2 {
+    flex-direction: row;
+    font-size: smaller;
+    color: #E5E7EB;
+    margin-right: 10px;
 }
 
-div#header-links {
-    display: contents
+#header-links {
+    display: contents;
 }
+
 
 div {
-    min-height: 100%;
     max-width: 100%;
 }
 
+#action {
+    background-color: #3882F6;
+    color: white;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    height: 70px;
+    font-size: 10px;
+}
+
+#quote {
+    justify-content: center;
+    align-items: center;
+    background-color: #E5E7EB;
+    font-size: 25px;
+    font-style: italic;
+}
+
+#top-middle {
+    text-align: center;
+}
+
+
+#quote-text {
+    margin: 20px;
+    padding-top: 50px;
+}
 
 html,
 body {
     padding: 0;
     margin: 0;
+    font-family: Roboto, Arial, Helvetica, sans-serif
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+}
+
+.center {
+    padding: 10px;
+    font-family: Roboto;
+}
+
+.image-border {
+    border: 3px solid blue;
+    border-radius: 25px;
+    padding: 20px;
+    width: 80px;
+    height: 80px;
+
+}
+
+img {
+    width: 90px;
+    height: 50px;
+}
+
+.img {
+    width: 90px;
+    float: left;
+    margin-left: 2%;
+    position: relative;
+}
+
+img {
+    max-width: 100%;
+}
+
+.no-height {
+    min-height: 0 !important;
+}
+
+
+#placeholder-img {
+    background: #000000;
+    color: whitesmoke;
+    min-height: 10em;
+    display: table-cell;
+    vertical-align: middle;
+    padding: 20px;
+    width: 200px;
+    height: 150px;
+}
+
+.img p {
+    position: absolute;
+    width: 100%;
+    bottom: 0px;
+    padding: 5px 0px;
+    margin: 0px
+}
+
+#quote div {
+    margin-right: 60px;
+    margin-left: 60px
+}
+
+#display-block {
+    display: block !important;
+    white-space: pre-wrap;
+}
+
+.product-images {
+    margin-left: 90px;
+}
+
+div.product-images {
+    max-width: 800px;
+}
+
+p#display-block {
+    max-width: 45%;
+}
+
+#hero-text {
+    display: inline-block;
+    color: #f9faf8;
+    font-size: 28px;
+    font-weight: bolder;
+    margin-right: 650px;
+    font-size: 25px;
+    justify-content: left;
+}
+
+h2 {
+    font-weight: 100;
+    font-size: small;
 }
